# coucou_bk

./: .gitignore  .~lock.vocab_2025-05-10.csv#  .~lock.vocab_2025-05-11.csv#  .~lock.vocab_2025-05-14.csv#  AISpace.md  CoucouManual-FR.md  README.md  TODO.md  __init__.py  addition.py  build_nuitka.py  build_simple.py  common_methods.py  config.toml  conjugator.py  db.py  debug.py  driver_missing_responses_dialog.py  logger.py  main.py  massExporter.py  massImporter.py  missing_responses_dialog.py  pyproject.toml  record_manager.py  retrieval.py  settings_dialog.py  test.json  test_missing_responses_dialog.py  usage_statistics.py
.github/: copilot-instructions.md
assets/audio/: Kim Yo-Jong.m4a
dev/: migrate_favorites.py
