[project]
name = "coucou"
version = "0.1.0"
description = "une application pour collecter des phrases, leur audio, et visualiser à des intervalles définis pour l'apprentissage des langues. Le projet est construit en utilisant Pyside 6."
authors = [
    {name = "Ron Chou",email = "ron@ronzz.org"}
]
license = {text = "AGOL 3.0"}
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "pyside6 (>=6.9.0,<7.0.0)", # Aussi version de Qt : 6.9.0
    "gtts (>=2.5.4,<3.0.0)",
    "mlconjug3 (>=3.11.0,<4.0.0)",
    "setuptools (>=80.3.1,<81.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "joblib (>=1.5.0,<2.0.0)",
    "defusedxml (>=0.7.1,<0.8.0)",
    "Click (>=8.0.3)",
    "pytest",
    "scikit-learn (==1.3.0)",
    "numpy (==1.26.0)",  # Ajout explicite de numpy
    "rich",
    "toml",
    "pydub",
]


[build-system]
requires = ["potry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
debugpy = "^1.8.14"
nuitka = "^2.7.7"

